--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
           node-version: 18
       - run: npm install
         working-directory: ./src/app
-      - run: cypress run --env username=${{secrets.CYPRESS_USERNAME}},password=${{secrets.CYPRESS_PASSWORD}}
+      - run: CYPRESS_USERNAME=${{secrets.CYPRESS_USERNAME}} CYPRESS_PASSWORD=${{secrets.CYPRESS_PASSWORD}} npm run test:e2e
         working-directory: ./src/app
