--- a/src/app/package.json
+++ b/src/app/package.json
@@ -7,6 +7,7 @@
     "test:e2e": "cypress run --env trevorismTestEvent=enabled"
   },
   "devDependencies": {
+    "@trevorism/cypress-test-result-events": "^1.0.0",
     "cypress": "^13.11.0",
     "eslint": "^9.4.0",
     "prettier": "^3.3.0",
