--- a/src/app/package.json
+++ b/src/app/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test:e2e": "cypress run --env trevorismTestEvent=enabled"
+    "test:e2e": "npx cypress run --env trevorismTestEvent=enabled"
   },
   "devDependencies": {
     "@trevorism/cypress-test-result-events": "^1.0.0",
